ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeshop-ingress
  namespace: kubeshop
spec:
  rules:
    - host: kubeshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          # - path: /mongo-express
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: mongo-express
          #       port:
          #         number: 8081
